--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 	    								<p class="code">Item code RJ78943</p>
 	    								<h4 class="title">Graceful Gold Bangle</h4>
 	    								<p>Elaborate Filigree Bangle crafted in 22 Karat Yellow Gold</p>
-	    								<p>SIZE<span>60mm</span></p>
-	    								<p>WEIGHT (GRAMS)<span>51.832</span></p>
+	    								<p>SIZE<span class="pl-1">60mm</span></p>
+	    								<p>WEIGHT (GRAMS)<span class="pl-1">51.832</span></p>
     								</div>
       							</div>
   							</div>
@@ -45,8 +45,8 @@
 	    								<p class="code">Item code RJ78943</p>
 	    								<h4 class="title">Graceful Gold Bangle</h4>
 	    								<p>Elaborate Filigree Bangle crafted in 22 Karat Yellow Gold</p>
-	    								<p>SIZE<span>60mm</span></p>
-	    								<p>WEIGHT (GRAMS)<span>51.832</span></p>
+	    								<p>SIZE<span class="pl-1">60mm</span></p>
+	    								<p>WEIGHT (GRAMS)<span class="pl-1">51.832</span></p>
     								</div>
       							</div>
 							</div>
@@ -57,8 +57,8 @@
 	    								<p class="code">Item code RJ78943</p>
 	    								<h4 class="title">Graceful Gold Bangle</h4>
 	    								<p>Elaborate Filigree Bangle crafted in 22 Karat Yellow Gold</p>
-	    								<p>SIZE<span>60mm</span></p>
-	    								<p>WEIGHT (GRAMS)<span>51.832</span></p>
+	    								<p>SIZE<span class="pl-1">60mm</span></p>
+	    								<p>WEIGHT (GRAMS)<span class="pl-1">51.832</span></p>
     								</div>
       							</div>
 							</div>
@@ -69,8 +69,8 @@
 	    								<p class="code">Item code RJ78943</p>
 	    								<h4 class="title">Graceful Gold Bangle</h4>
 	    								<p>Elaborate Filigree Bangle crafted in 22 Karat Yellow Gold</p>
-	    								<p>SIZE<span>60mm</span></p>
-	    								<p>WEIGHT (GRAMS)<span>51.832</span></p>
+	    								<p>SIZE<span class="pl-1">60mm</span></p>
+	    								<p>WEIGHT (GRAMS)<span class="pl-1">51.832</span></p>
     								</div>
       							</div>
 							</div>	    					
@@ -81,8 +81,10 @@
 	    								<p class="code">Item code RJ78943</p>
 	    								<h4 class="title">Graceful Gold Bangle</h4>
 	    								<p>Elaborate Filigree Bangle crafted in 22 Karat Yellow Gold</p>
-	    								<p>SIZE<span>60mm</span></p>
-	    								<p>WEIGHT (GRAMS)<span>51.832</span></p>
+	    								<p>SIZE<span >60mm</span></p>
+	    								<p>SIZE<span class="">60mm</span></p>
+	    								<p>SIZE<span >60mm</span></p>
+	    								<p>WEIGHT (GRAMS)<span class="">51.832</span></p>
     								</div>
       							</div>
 							</div>
