removed extra text

--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
 	    								<p class="code">Item code RJ78943</p>
 	    								<h4 class="title">Graceful Gold Bangle</h4>
 	    								<p>Elaborate Filigree Bangle crafted in 22 Karat Yellow Gold</p>
-	    								<p>SIZE<span >60mm</span></p>
-	    								<p>SIZE<span class="">60mm</span></p>
-	    								<p>SIZE<span >60mm</span></p>
+	    								<p>SIZE<span class="pl-1">60mm</span></p>
 	    								<p>WEIGHT (GRAMS)<span class="">51.832</span></p>
     								</div>
       							</div>
